# weather-polybar-plugin

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: usage.spec.kdl
src/: lib.rs  main.rs  weather_conditions.json
src/files/: cli.rs  mod.rs  output.rs  weather.rs
src/plugin/: config.rs  mod.rs  output.rs  weather.rs
