[package]
name = "weather_polybar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.140"
toml = "0.8.22"
dirs = "6.0.0"

[profile.release]
opt-level = 3
strip = true
