[package]
name = "weather-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.37", features = ["derive", "cargo"] }
clap_usage = "2.0.3"
serde_json = "1.0.140"
toml = "0.8.22"
dirs = "6.0.0"

[profile.release]
opt-level = 3
strip = true
